--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,6 +11,6 @@ compatibility_flags = ["nodejs_compat"]
 
 # If you bind resources like R2/ KV/ D1, define them here or in the Pages dashboard.
 # Example (uncomment and adjust bucket_name to your actual bucket):
-# r2_buckets = [
-#   { binding = "R2", bucket_name = "your-r2-bucket" }
-# ]
+r2_buckets = [
+   { binding = "R2", bucket_name = "roim-picx" }
+]
